# opentree

./: .editorconfig  .env.development  .gitignore  .rumdl.toml  AGENTS.md  ARCHITECTURE.md  BRAINSTORM.md  Cargo.toml  DECISIONS.md  GOAL.md  HUMAN_QUESTIONS.md  IMPENDING.md  PROBLEM.md  PROPOSAL.md  PROPOSAL2.md  PROPOSAL3.md  README.md  REVIEWS.md  VISION.md  WIP.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.runner/: ASSUMPTIONS.md  GOAL.md  HUMAN_QUESTIONS.md  IMPROVEMENTS.md  tree.json
docs/: INDEX.md
eval/: .gitignore  Cargo.toml
eval/cases/: README.md  calculator-go.toml
eval/src/: case.rs  cli.rs  config.rs  harness.rs  judge.rs  main.rs  outcome.rs  report.rs  results.rs  run.rs  workspace.rs
migration/: COPYLIST.md  FEEDBACK_LOG.md  GLOSSARY.md  GOAL.md  HUMAN_QUESTIONS.md  INDEX.md  MAPPING.md  WIPE_CHECKLIST.md
runner/: Cargo.toml
runner-ui/: Cargo.toml
runner-ui/src/: main.rs  routes.rs  sse.rs  state.rs
runner/prompt_lab/: .gitignore  Cargo.toml
runner/prompt_lab/dashboard/: package.json  svelte.config.js  vite.config.js
runner/prompt_lab/dashboard/src/: app.html
runner/prompt_lab/dashboard/src/lib/: results.ts
runner/prompt_lab/dashboard/src/routes/: +layout.ts  +page.svelte
runner/prompt_lab/inputs/decomposer/: complex_oauth.json  medium_refactor.json  simple_typo.json
runner/prompt_lab/inputs/tree_agent/: complex_oauth.json  medium_refactor.json  simple_typo.json
runner/prompt_lab/prompts/decomposer/: baseline.md  variant_explicit.md
runner/prompt_lab/prompts/tree_agent/: variant_explicit.md
runner/prompt_lab/schemas/: decomposer_output.json  tree_decision.json
runner/prompt_lab/src/: cache.rs  main.rs  render.rs  runner.rs
runner/schemas/: agent_output.schema.json  decomposer_output.schema.json  executor_output.schema.json  tree_decision.schema.json
runner/src/: exit_codes.rs  lib.rs  logging.rs  looping.rs  main.rs  select.rs  start.rs  step.rs  test_support.rs  tree.rs  validate.rs
runner/src/agents/: decomposer.rs  executor.rs  mod.rs  tree.rs
runner/src/core/: budget.rs  child_additions.rs  classifier.rs  immutability.rs  invariants.rs  mod.rs  path.rs  selector.rs  state_update.rs  status_validator.rs  types.rs
runner/src/io/: config.rs  context.rs  executor.rs  git.rs  goal.rs  guards.rs  init.rs  iteration_log.rs  mod.rs  process.rs  prompt.rs  run_state.rs  tree_store.rs
runner/src/io/prompts/: decomposer.md  executor.md  tree_agent.md
runner/tests/: README.md  cli_select.rs  harness_lifecycle.rs  investigation.rs  investigation_db.rs  investigation_llm.rs
runner/tests/fixtures/configs/: non_default.toml
runner/tests/fixtures/trees/: simple_tree.json  tree_with_passed_node.json  tree_with_stuck_leaf.json
runner/tests/investigation/: codex.rs  codex_output_schema.rs  decomposer.rs  tree_agent.rs
runner/tests/investigation_db/: README.md
ui/: index.html  package.json  test.html  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+148 files in other folders)
