[package]
name = "runner-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runner-ui"
path = "src/main.rs"

[dependencies]
runner = { path = "../runner" }
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"

[lints]
workspace = true
