[package]
name = "runner"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[features]
test-support = ["dep:tempfile"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
jsonschema = "0.39.0"
minijinja = "2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = { version = "3.10.1", optional = true }
toml = "0.9.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wait-timeout = "0.2.1"

[dev-dependencies]
runner = { path = ".", features = ["test-support"] }

[lints]
workspace = true
