[package]
name = "prompt_lab"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "prompt-lab"
path = "src/main.rs"

[dependencies]
runner = { path = ".." }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
